--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<title>TecBlog - O seu Blog de tecnologia</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="src/css/estilos.css">
 </head>
-
 <body>
 	<div id="area-cabecalho">
 		<div id="area-logo">
@@ -13,10 +12,10 @@
 		</div>
 		<div id="area-menu">
 			<a href="index.html">Home</a>
-			<a href="jogos.html">Jogos</a>
-			<a href="celulares.html">Celulares</a>
-			<a href="informatica.html">Informática</a>
-			<a href="eletronicos.html">Eletrônicos</a>
+			<a href="#">Jogos</a>
+			<a href="#">Celulares</a>
+			<a href="#">Informática</a>
+			<a href="#">Eletrônicos</a>
 		</div>
 	</div>
 	<div id="area-principal">
@@ -26,7 +25,9 @@
 				<span class="data-postagem">postado 20 março 2022</span>
 				<img width="620px" src="imagens/imagem1.jpg">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et scelerisque quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nulla turpis, gravida at nunc eu, luctus aliquam justo. Praesent eget risus vehicula
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et scelerisque quam. Class aptent
+					taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nulla
+					turpis, gravida at nunc eu, luctus aliquam justo. Praesent eget risus vehicula
 				</p>
 				<a href="">Leia mais</a>
 			</div>
@@ -35,10 +36,12 @@
 				<span class="data-postagem">postado 10 março 2022</span>
 				<img width="620px" src="imagens/imagem2.jpg">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et scelerisque quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nulla turpis, gravida at nunc eu, luctus aliquam justo. Praesent eget risus vehicula
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et scelerisque quam. Class aptent
+					taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nulla
+					turpis, gravida at nunc eu, luctus aliquam justo. Praesent eget risus vehicula
 				</p>
 				<a href="">Leia mais</a>
-			</div> 
+			</div>
 		</div>
 		<div id="area-lateral">
 			<div class="conteudo-lateral">
@@ -61,7 +64,6 @@
 				<a href="">Jogos</a><br>
 			</div>
 		</div>
-
 		<div id="rodape">
 			Todos os direitos reservados
 		</div>
