--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		</div>
 		<div id="area-menu">
 			<a href="index.html">Home</a>
-			<a href="#">Jogos</a>
-			<a href="#">Celulares</a>
-			<a href="#">Informática</a>
-			<a href="#">Eletrônicos</a>
+			<a href="jogos.html">Jogos</a>
+			<a href="celulares.html">Celulares</a>
+			<a href="informatica.html">Informática</a>
+			<a href="eletronicos.html">Eletrônicos</a>
 		</div>
 	</div>
 	<div id="area-principal">
@@ -23,7 +23,7 @@
 			<div class="postagem">
 				<h2>Titulo da postagem 1</h2>
 				<span class="data-postagem">postado 20 março 2022</span>
-				<img width="620px" src="imagens/imagem1.jpg">
+				<img width="620px" src="src/imagens/imagem1.jpg">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et scelerisque quam. Class aptent
 					taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nulla
@@ -34,7 +34,7 @@
 			<div class="postagem">
 				<h2>Titulo da postagem 2</h2>
 				<span class="data-postagem">postado 10 março 2022</span>
-				<img width="620px" src="imagens/imagem2.jpg">
+				<img width="620px" src="src/imagens/imagem2.jpg">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et scelerisque quam. Class aptent
 					taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent nulla
